; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/utils/tificc/extr_tificc.c_PackTIFFLab8.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/utils/tificc/extr_tificc.c_PackTIFFLab8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct._cmstransform_struct = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32, %struct._cmstransform_struct*, i64*, i8*, %struct._cmstransform_struct*)* @PackTIFFLab8 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @PackTIFFLab8(i32 %0, %struct._cmstransform_struct* %1, i64* %2, i8* %3, %struct._cmstransform_struct* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct._cmstransform_struct*, align 8
  %8 = alloca i64*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca %struct._cmstransform_struct*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store %struct._cmstransform_struct* %1, %struct._cmstransform_struct** %7, align 8
  store i64* %2, i64** %8, align 8
  store i8* %3, i8** %9, align 8
  store %struct._cmstransform_struct* %4, %struct._cmstransform_struct** %10, align 8
  %13 = load i64*, i64** %8, align 8
  %14 = getelementptr inbounds i64, i64* %13, i64 0
  %15 = load i64, i64* %14, align 8
  %16 = add nsw i64 %15, 128
  %17 = call i32 @FromLabV4ToLabV2(i64 %16)
  %18 = ashr i32 %17, 8
  %19 = trunc i32 %18 to i8
  %20 = load i8*, i8** %9, align 8
  %21 = getelementptr inbounds i8, i8* %20, i32 1
  store i8* %21, i8** %9, align 8
  store i8 %19, i8* %20, align 1
  %22 = load i64*, i64** %8, align 8
  %23 = getelementptr inbounds i64, i64* %22, i64 1
  %24 = load i64, i64* %23, align 8
  %25 = call i32 @FromLabV4ToLabV2(i64 %24)
  %26 = add nsw i32 %25, 128
  %27 = ashr i32 %26, 8
  store i32 %27, i32* %11, align 4
  %28 = load i64*, i64** %8, align 8
  %29 = getelementptr inbounds i64, i64* %28, i64 2
  %30 = load i64, i64* %29, align 8
  %31 = call i32 @FromLabV4ToLabV2(i64 %30)
  %32 = add nsw i32 %31, 128
  %33 = ashr i32 %32, 8
  store i32 %33, i32* %12, align 4
  %34 = load i32, i32* %11, align 4
  %35 = icmp slt i32 %34, 128
  br i1 %35, label %36, label %39

36:                                               ; preds = %5
  %37 = load i32, i32* %11, align 4
  %38 = add nsw i32 %37, 128
  br label %42

39:                                               ; preds = %5
  %40 = load i32, i32* %11, align 4
  %41 = sub nsw i32 %40, 128
  br label %42

42:                                               ; preds = %39, %36
  %43 = phi i32 [ %38, %36 ], [ %41, %39 ]
  %44 = trunc i32 %43 to i8
  %45 = load i8*, i8** %9, align 8
  %46 = getelementptr inbounds i8, i8* %45, i32 1
  store i8* %46, i8** %9, align 8
  store i8 %44, i8* %45, align 1
  %47 = load i32, i32* %12, align 4
  %48 = icmp slt i32 %47, 128
  br i1 %48, label %49, label %52

49:                                               ; preds = %42
  %50 = load i32, i32* %12, align 4
  %51 = add nsw i32 %50, 128
  br label %55

52:                                               ; preds = %42
  %53 = load i32, i32* %12, align 4
  %54 = sub nsw i32 %53, 128
  br label %55

55:                                               ; preds = %52, %49
  %56 = phi i32 [ %51, %49 ], [ %54, %52 ]
  %57 = trunc i32 %56 to i8
  %58 = load i8*, i8** %9, align 8
  %59 = getelementptr inbounds i8, i8* %58, i32 1
  store i8* %59, i8** %9, align 8
  store i8 %57, i8* %58, align 1
  %60 = load i8*, i8** %9, align 8
  ret i8* %60
}

declare dso_local i32 @FromLabV4ToLabV2(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
